UI Update: Adjusted row-gap for better UX and fixed line-height & letter-spacing problem for mobile devices.

--- a/main.css
+++ b/main.css
@@ -86,8 +86,6 @@ main {
 }
 @media only screen and (max-width: 600px) {
   * {
-    line-height: unset;
-    letter-spacing: unset;
     word-spacing: unset;
   }
   .conditional-breakline {
